# agentic-ai-framework

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
agentic_framework/: __init__.py  agent.py  llm.py  memory.py  orchestrator.py  reasoning.py  tools.py
docs/: ARCHITECTURE.md  QUICKSTART.md
examples/: customer_support.py  multi_agent_team.py  parallel_agents.py  research_assistant.py  simple_agent.py
tests/: __init__.py  test_agent.py  test_memory.py  test_orchestrator.py  test_tools.py
